--- a/style.css
+++ b/style.css
@@ -1,18 +1,10 @@
 
-p {
-
- color:red;
+p {color:red;
  font-size: 30;
- text-align: right;
-
- }
-h1 {
- color:blue;
+ text-align: right;}
+h1 {color:blue;
  text-align: center;
- font-size: 50;
- }
-h2 {
- color:green;
+ font-size: 50;}
+h2 {color:green;
  text-align: left;
- font-size: 40;
- }
+ font-size: 40;}
