--- a/style.css
+++ b/style.css
@@ -1,10 +1,23 @@
+#imagem {
+   text-align:center;
+}
 
-p {color:red;
- font-size: 30;
- text-align: right;}
-h1 {color:blue;
- text-align: center;
- font-size: 50;}
-h2 {color:green;
- text-align: left;
- font-size: 40;}
+#link {
+  text-align:center;
+}
+
+p {
+  color:red;
+  font-size:30;
+  text-align:left;
+}
+
+h1 {
+    color:blue;
+    font-size:50;
+    text-align:center;
+ }
+h2 {
+    color:green;
+    font-size:40;
+    text-align:right;
