--- a/::/style.css
+++ b/::/style.css
@@ -1,10 +1,32 @@
+.imagens {
+    text-align: center;
+    background: black;
+}
+.listas {
+   background: black;
+}
+.minhalista {
+    color: whitesmoke
+    font-size: 30;
+}
 .lista {
-   color: red;
+   color: whitesmoke;
    font-size: 30;
 }
 
 #imagem {
    text-align: center;
+   border: 5px;
+   border-style: solid;
+   border-color: blue;
+   border-top-left-radius: 25px;
+   border-top-right-radius: 25px;
+   border-bottom-left-radius: 25px;
+   border-bottom-right-radius: 25px;
+   padding-top: 20px;
+   padding-bottom: 20px;
+   margin-left: 570px;
+   margin-right: 570px;
 }
 
 #link {
@@ -28,3 +50,6 @@ h2 {
     font-size: 40;
     text-align: right;
 }
+
+
+
